--- a/OLTRA/Resources/MainWindow.glade
+++ b/OLTRA/Resources/MainWindow.glade
@@ -44,6 +44,16 @@ Author: Brian J Hoskins
       <column type="guint"/>
     </columns>
   </object>
+  <object class="GtkListStore" id="lst_listeners">
+    <columns>
+      <!-- column-name col_name -->
+      <column type="gchararray"/>
+      <!-- column-name col_description -->
+      <column type="gchararray"/>
+      <!-- column-name col_type -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkListStore" id="lst_projects">
     <columns>
       <!-- column-name Name -->
@@ -505,6 +515,8 @@ ID</property>
                               <object class="GtkFrame" id="frm_projects">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="margin_left">5</property>
+                                <property name="margin_right">5</property>
                                 <property name="label_xalign">0</property>
                                 <property name="shadow_type">in</property>
                                 <child>
@@ -522,7 +534,7 @@ ID</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="shadow_type">in</property>
-                                            <property name="min_content_height">50</property>
+                                            <property name="min_content_height">80</property>
                                             <child>
                                               <object class="GtkTreeView" id="trv_projects">
                                                 <property name="visible">True</property>
@@ -650,15 +662,136 @@ ID</property>
                               <object class="GtkFrame" id="frm_listeners">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="margin_left">5</property>
+                                <property name="margin_right">5</property>
                                 <property name="label_xalign">0</property>
-                                <property name="shadow_type">none</property>
+                                <property name="shadow_type">in</property>
                                 <child>
                                   <object class="GtkAlignment" id="alignment2">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="left_padding">12</property>
                                     <child>
-                                      <placeholder/>
+                                      <object class="GtkBox" id="box8">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">False</property>
+                                        <property name="orientation">vertical</property>
+                                        <child>
+                                          <object class="GtkScrolledWindow" id="scrolledwindow3">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="shadow_type">in</property>
+                                            <property name="min_content_height">80</property>
+                                            <child>
+                                              <object class="GtkTreeView" id="trv_listeners">
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">True</property>
+                                                <property name="model">lst_listeners</property>
+                                                <child internal-child="selection">
+                                                  <object class="GtkTreeSelection" id="treeview-selection6"/>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkTreeViewColumn" id="col_name">
+                                                    <property name="title" translatable="yes">NAME</property>
+                                                    <child>
+                                                      <object class="GtkCellRendererText" id="cell_text_lsnr_name"/>
+                                                      <attributes>
+                                                        <attribute name="text">0</attribute>
+                                                      </attributes>
+                                                    </child>
+                                                  </object>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkTreeViewColumn" id="col_description">
+                                                    <property name="title" translatable="yes">DESCRIPTION</property>
+                                                    <child>
+                                                      <object class="GtkCellRendererText" id="cell_text_lsnr_description"/>
+                                                      <attributes>
+                                                        <attribute name="text">1</attribute>
+                                                      </attributes>
+                                                    </child>
+                                                  </object>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkTreeViewColumn" id="col_type">
+                                                    <property name="title" translatable="yes">TYPE</property>
+                                                    <child>
+                                                      <object class="GtkCellRendererText" id="cell_text_lsnr_type"/>
+                                                      <attributes>
+                                                        <attribute name="text">2</attribute>
+                                                      </attributes>
+                                                    </child>
+                                                  </object>
+                                                </child>
+                                              </object>
+                                            </child>
+                                          </object>
+                                          <packing>
+                                            <property name="expand">False</property>
+                                            <property name="fill">True</property>
+                                            <property name="position">0</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <object class="GtkGrid" id="grid2">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">False</property>
+                                            <child>
+                                              <object class="GtkButton" id="btn_lsnr_add">
+                                                <property name="label" translatable="yes">ADD</property>
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">True</property>
+                                                <property name="receives_default">True</property>
+                                              </object>
+                                              <packing>
+                                                <property name="left_attach">0</property>
+                                                <property name="top_attach">0</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkButton" id="btn_lsnr_edit">
+                                                <property name="label" translatable="yes">EDIT</property>
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">True</property>
+                                                <property name="receives_default">True</property>
+                                              </object>
+                                              <packing>
+                                                <property name="left_attach">1</property>
+                                                <property name="top_attach">0</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkButton" id="btn_lsnr_status">
+                                                <property name="label" translatable="yes">DISABLE</property>
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">True</property>
+                                                <property name="receives_default">True</property>
+                                              </object>
+                                              <packing>
+                                                <property name="left_attach">0</property>
+                                                <property name="top_attach">1</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkButton" id="btn_lsnr_delete">
+                                                <property name="label" translatable="yes">DELETE</property>
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">True</property>
+                                                <property name="receives_default">True</property>
+                                              </object>
+                                              <packing>
+                                                <property name="left_attach">1</property>
+                                                <property name="top_attach">1</property>
+                                              </packing>
+                                            </child>
+                                          </object>
+                                          <packing>
+                                            <property name="expand">False</property>
+                                            <property name="fill">True</property>
+                                            <property name="position">1</property>
+                                          </packing>
+                                        </child>
+                                      </object>
                                     </child>
                                   </object>
                                 </child>
