--- a/OLTRA/Resources/MainWindow.glade
+++ b/OLTRA/Resources/MainWindow.glade
@@ -943,21 +943,6 @@ ID</property>
                                 <property name="top_attach">0</property>
                               </packing>
                             </child>
-                            <child>
-                              <placeholder/>
-                            </child>
-                            <child>
-                              <placeholder/>
-                            </child>
-                            <child>
-                              <placeholder/>
-                            </child>
-                            <child>
-                              <placeholder/>
-                            </child>
-                            <child>
-                              <placeholder/>
-                            </child>
                           </object>
                         </child>
                       </object>
@@ -1157,5 +1142,8 @@ ID</property>
         </child>
       </object>
     </child>
+    <style>
+      <class name="styles.css"/>
+    </style>
   </object>
 </interface>
